--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,14 @@
             <artifactId>java-client</artifactId>
             <version>7.6.0</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.13.0</version>
+        </dependency>
+
     </dependencies>
+
 
 </project>
